<resources>
    <string name="app_name">Battery Tool</string>
    <string name="app_description">Automatically stop apps running in the background</string>
    <string name="shortcut">Stop now</string>

    <string name="service_text">Battery Tool is running in the background</string>
    <string name="service_channel">Service channel</string>

    <string name="setup_title">Automatically stop apps running in the background.</string>
    <string name="setup_summary">To do that this app needs root permissions. Just grant them after you have clicked continue.</string>
    <string name="setup_button">Continue</string>
    <string name="setup_demo">Demo</string>
    <string name="setup_demo_summary">You can use the demo mode to take a look at the application without any functionality. Enable root access for the app to work.</string>

    <string name="action_failed">Action failed</string>
    <string name="action_failed_summary">Root is needed for this app to work. Please enable root access.</string>

    <string name="str_security">Security</string>

    <string name="main_stopped_soon">Will get stopped soon</string>
    <string name="main_stopped_unnecessary">No need to stop</string>
    <string name="main_stopped">Stopped</string>
    <string name="main_empty">Nothing to show here</string>
    <string name="main_empty_summary">It seems that no app falls into this category</string>
    <string name="main_forced">(forced)</string>

    <string name="pref_allow_music_apps">Ignore music app</string>
    <string name="pref_allow_music_apps_summary">Don\’t stop currently playing music app</string>
    <string name="notifications_permission">Notifications Permission</string>
    <string name="notifications_permission_explanation">To detect Apps which are playing music this app needs to read currently showing notifications, and thus needs the permission</string>

    <string name="main_click_dialog_title">Select Action</string>
    <string name="main_click_dialog_turn_on_always">Always stop this app</string>
    <string name="main_click_dialog_turn_off_always">Do not always stop this app</string>
    <string-array name="main_click_dialog_options">
        <item>Stop now</item>
        <item>Open app settings</item>
        <item>Remove from list</item>
    </string-array>

    <string name="toast_stopped">Stopped selected app</string>
    <string name="toast_stopped_all">Stopped selected apps</string>

    <string name="adding">Add applications</string>
    <string name="adding_user">User Applications</string>
    <string name="adding_system">System Applications</string>

    <string name="prefs">Settings</string>
    <string name="pref_auto_stop">Automatically stop</string>
    <string name="pref_auto_stop_summary">Automatically stop apps after the screen turns off</string>
    <string name="pref_auto_stop_delay">Auto stop delay</string>
    <string name="pref_aggressive_doze">Aggressive doze</string>
    <string name="pref_aggressive_doze_summary">Enter doze mode after the screen turns off</string>
    <string name="pref_aggressive_doze_delay">Aggressive doze delay</string>
    <string name="pref_ignore_focused_app">Ignore focused apps</string>
    <string name="pref_ignore_focused_app_summary">Don\’t stop currently focused apps</string>
    <string name="pref_theme">Change theme</string>
    <string name="pref_theme_summary">Changes the look of the app</string>

    <string name="pref_int_failed">This value cannot be used</string>

    <string-array name="pref_theme_array">
        <item>Light theme</item>
        <item>Dark theme</item>
        <item>Black theme</item>
        <item>Follow system theme</item>
    </string-array>
    <string-array name="pref_theme_array_values" translatable="false">
        <item>light</item>
        <item>dark</item>
        <item>black</item>
        <item>auto</item>
    </string-array>

    <string name="loading">Loading</string>

    <string name="about">About</string>
    <string name="about_summary">About the app</string>
    <string name="about_app_version">App version</string>
    <string name="about_app_version_desc" translatable="false">%1$s (%2$d)</string>
    <string name="about_privacy">External Content</string>
    <string name="about_privacy_desc">Contributors are loaded from GitHub. Read their privacy policy for further information.</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_contributors">Contributors</string>
    <string name="about_contributors_desc">A list of the contributors</string>
    <string name="about_general">General</string>
    <string name="about_github">GitHub repository</string>
    <string name="about_license">License</string>
    <string name="about_license_desc" translatable="false">GPL-3.0</string>
    <string name="about_icons">Icons</string>
    <string name="about_icons_desc">Icons by Icons8 and Google</string>
    <string name="about_libraries">Libraries</string>
    <string name="about_libraries_desc">A list of all used libraries</string>

    <string-array name="about_libraries" translatable="false">
        <item>Android AppCompat Library</item>
        <item>Android Preferences KTX</item>
        <item>AndroidX Media2 Session Library</item>
        <item>Material Components For Android</item>
        <item>Volley</item>
    </string-array>
    <string-array name="about_icons_array" translatable="false">
        <item>Icons8</item>
        <item>Google</item>
    </string-array>
</resources>