<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_auto_stop"
        android:key="auto_stop"
        android:summary="@string/pref_auto_stop_summary"
        android:title="@string/pref_auto_stop" />
    <io.github.domi04151309.batterytool.custom.EditIntegerPreference
        android:defaultValue="10"
        android:icon="@drawable/ic_timer"
        android:key="auto_stop_delay"
        android:summary="@string/pref_auto_stop_delay"
        android:title="@string/pref_auto_stop_delay" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_snooze"
        android:key="aggressive_doze"
        android:summary="@string/pref_aggressive_doze_summary"
        android:title="@string/pref_aggressive_doze" />
    <io.github.domi04151309.batterytool.custom.EditIntegerPreference
        android:defaultValue="600"
        android:icon="@drawable/ic_timer"
        android:key="aggressive_doze_delay"
        android:summary="@string/pref_aggressive_doze_delay"
        android:title="@string/pref_aggressive_doze_delay" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_focus"
        android:key="ignore_focused_apps"
        android:summary="@string/pref_ignore_focused_app_summary"
        android:title="@string/pref_ignore_focused_app" />
    <SwitchPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_music"
        android:key="allow_music"
        android:summary="@string/pref_allow_music_apps_summary"
        android:title="@string/pref_allow_music_apps" />
    <ListPreference
        android:defaultValue="auto"
        android:entries="@array/pref_theme_array"
        android:entryValues="@array/pref_theme_array_values"
        android:icon="@drawable/ic_style"
        android:key="theme"
        android:summary="@string/pref_theme_summary"
        android:title="@string/pref_theme" />
    <Preference
        android:icon="@drawable/ic_info"
        android:key="about"
        android:summary="@string/about_summary"
        android:title="@string/about" />

</PreferenceScreen>
