<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.domi04151309.batterytool.activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/app_name"
            app:titleCentered="true"
            app:menu="@menu/top_app_bar" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/top_app_bar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        style="@style/Widget.Material3.FloatingActionButton.Secondary"
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/hibernate"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="@dimen/fab_margin"
        android:layout_marginTop="@dimen/fab_margin"
        android:contentDescription="@string/adding"
        app:srcCompat="@drawable/ic_add" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/hibernate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/shortcut"
        app:srcCompat="@drawable/ic_spa" />
</RelativeLayout>